feature/menu: реализация блока "Меню"
- реализовано клиент-серверное взаимодействие для блока меню
- перегенерирована схема запросов
- настроена команда для генерации api
